--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "start": "node .",
-    "test": "node ."
+    "start": "node ."
   },
   "author": "",
   "license": "ISC",
